# keeframes

./: .gitignore  README.md
api/: .env.example  main.py  pyproject.toml
api/app/: __init__.py  config.py  models.py  socketio.py
api/app/auth/: __init__.py  context.py  decorators.py  utils.py
api/app/migrations/versions/: a93aef95df44_removed_some_nullables.py  c08c031b2620_readded_all_the_tables.py
api/app/models/: __init__.py  comment.py  edit.py  enums.py  extensions.py  hashtag.py  relationships.py  software.py  user.py  video.py
api/app/routes/: __init__.py  auth.py  chat.py  edit.py  hashtag.py  software.py  user.py  users.py  video.py
api/app/utils/: cloudfront.py  cognito.py  compression.py  constants.py  edit.py  helpers.py  secrets.py  test.py  video.py
api/migrations/versions/: 0386288935ae_added_timestamps_to_posts.py  1eee36becf78_changed_table_names.py  2d1fff31421c_added_likes_table.py  534e30f6d41e_changed_user.py  5b48a3bb97c4_users_and_video_and_hashtags.py  6959955fd9bf_added_comments.py  74c8df5cb4e5_added_comments_likes.py  765bdcd0526e_added_software_id.py  a182b0383f5a_added_more_user_details.py  aa1f9dac5b0b_software_table.py  bd4fc3a990b0_added_a_pfp_field.py  bd5281ef1e2c_added_gender_enum.py  c3db4e442e36_added_age.py  c3f6248d092e_admin_field.py  c4f70a5bf8b1_changed_name_to_nickname.py  d115f4feedba_followers_many_to_man.py  da1b9d39bf74_initial_migration_user.py  efb0c1fa6696_changed_edit_timestamp_to_created_at.py  f5a28bbc86d2_signup_model_fix.py
api/src/app/: __init__.py  models.py
api/src/app/routes/: __init__.py  auth.py
api/src/migrations/versions/: c3fdd2b65089_initial_migration_user.py
react/: .env.example  index.html  package-lock.json  package.json
react/src/: App.jsx  index.css
react/src/api/: authService.jsx  software.js  user.js
react/src/components/: WebSocketCall.jsx
react/src/contexts/: FormStoreContext.jsx  SignUpContext.jsx  UserContext.jsx
(+80 files in other folders)
